<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/login_title"
        android:textColor="#2F90A8"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="76dp"
        android:background="#FFFFFF"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="#2F90A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="#2F90A8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="128dp"
        android:background="#2F90A8"
        android:padding="8dp"
        android:text="@string/login_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="388dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="64dp"
        android:text="____________________________OR____________________________"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="104dp"
        android:padding="8dp"
        android:text="create an account "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.697" />

</androidx.constraintlayout.widget.ConstraintLayout>